--- a/排序法汇总/排序法总结.md
+++ b/排序法汇总/排序法总结.md
@@ -84,7 +84,7 @@
 
 每轮排序需要对待排序序列中的所有记录扫描一遍，因此耗费O(n)时间，而由完全二叉树的深度可知，整个归并排序需要进行logn次，因此，总的时间复杂度为O(nlogn)，且归并排序对原始序列的顺序不敏感，无论是最好最坏还是平均的时间复杂度都是0(nlogn)。
 
-归并排序在归并过程中需要与原始记录序列同样数量的存储空间存放归并结果以及递归时深度为logn的栈空间，因此空间复杂度为O(n)。
+归并排序在归并过程中需要与原始记录序列同样数量的存储空间存放归并结果以及递归时深度为logn的栈空间，因此空间复杂度为O(n+logn)。
 
 归并算法需要两两比较，不存在跳跃，因此归并排序是一种稳定的排序算法。
 
