--- a/排序法汇总/排序法总结.md
+++ b/排序法汇总/排序法总结.md
@@ -72,7 +72,7 @@
 
 堆排序的基本思想为先将要排序的序列构成一个大顶堆，此时整个序列的最大值即为大顶堆的根节点，将其和堆的最后一个元素交换，其次堆的最后一个元素就变成了最大值。然后将剩余的n-1个序列重新构成一个大顶堆，这样就可以得到n个元素中的次大值，如此反复进行，即可得到一个有序序列。
 
-堆排序的主要时间花在初始建堆期间和重建堆的反复筛选上，整个构建堆的复杂度为0(nlogn)。建好堆后，堆这种数据结构以及它奇妙的特征，使得找到数列中最大的数字这样的操作只需要O(1)的时间复杂度，维护需要logn的时间复杂度。由于初始建堆所需的比较次数较多，所以堆排序不适宜于记录数较少的文件，而适合于数据量非常大的场合（百万数据）。堆排序不需要大量的递归或者多维的暂存数组。这对于数据量非常巨大的序列是合适的。比如超过数百万条记录，因为快速排序，归并排序都使用递归来设计算法，在数据量非常大的时候，可能会发生堆栈溢出错误。
+堆排序的主要时间花在初始建堆期间和重建堆的反复筛选上，整个构建堆的复杂度为0(nlogn)。建好堆后，堆这种数据结构以及它奇妙的特征，使得找到数列中最大的数字这样的操作只需要O(1)的时间复杂度，维护需要logn的时间复杂度。由于初始建堆所需的比较次数较多，所以堆排序不适宜于记录数较少的文件，而适合于**数据量非常大的场合**（百万数据）。堆排序不需要大量的递归或者多维的暂存数组。这对于数据量非常巨大的序列是合适的。比如超过数百万条记录，因为快速排序，归并排序都使用递归来设计算法，在数据量非常大的时候，可能会发生堆栈溢出错误。
 
 堆排序对原始记录的排序并不敏感，因此无论是最好最坏还是平均的时间复杂度都是0(nlogn)，且在空间复杂度上，它只有一个用来交换的暂存单元。
 
